--- a/src/handlebars/boards.handlebars
+++ b/src/handlebars/boards.handlebars
@@ -1,8 +1,12 @@
 <h1>Testing</h1>
 
-{{#each boards}}
-  ID: <h2>{{id}}</h2>
-  type: <h3>{{type}}</h3>
-
-  <hr>
-{{/each}}
+<div class="boards container">
+  <div class="row">
+    {{#each boards}}
+      <div class="col-md-4">
+        ID: <h2>{{id}}</h2>
+        type: <h3>{{type}}</h3>
+      </div>
+    {{/each}}
+  </div>
+</div>
