--- a/src/handlebars/boards.handlebars
+++ b/src/handlebars/boards.handlebars
@@ -1,12 +1,3 @@
-<h1>Testing</h1>
-
 <div class="boards container">
-  <div class="row">
-    {{#each boards}}
-      <div class="col-md-4" {{action 'click' id}}>
-        ID: <h2>{{id}}</h2>
-        type: <h3>{{type}}</h3>
-      </div>
-    {{/each}}
-  </div>
+  {{outlet}}
 </div>
