--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,6 +1,15 @@
 @import "boards";
 @import "streams";
+@import "colors";
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Lato', sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  background-color: @exceptionally_light_gray;
 }
