glyph link not wired up

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -13,4 +13,12 @@ a {
 
 body {
   background-color: @exceptionally_light_gray;
+
+  .right_pane {
+    position: absolute;
+    top: 0px;
+    left: 100px;
+    right: 0px;
+    bottom: 0px;
+  }
 }
