--- a/src/less/sidebar/sidebar.less
+++ b/src/less/sidebar/sidebar.less
@@ -1,6 +1,20 @@
 .sidebar {
   width: 100px;
-  height: 100px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
 
-  background-color: red;
+  background-color: @banner_color;
+
+  .glyphicon {
+    font-size: -webkit-xxx-large;
+    margin: 20px 0px 0px 27px;
+
+    cursor: pointer;
+
+    &:hover {
+      color: @white_trans;
+    }
+  }
 }
