an actual menu link

--- a/src/handlebars/sidebar.handlebars
+++ b/src/handlebars/sidebar.handlebars
@@ -1,4 +1,6 @@
 <div class="sidebar">
-  <span class="glyphicon glyphicon-th">
-  </span>
+  {{#link-to 'boards'}}
+    <span class="glyphicon glyphicon-th">
+    </span>
+  {{/link-to}}
 </div>
