--- a/src/less/index.less
+++ b/src/less/index.less
@@ -21,5 +21,8 @@ body {
     top: 0px;
     left: 100px;
     bottom: 0px;
+
+    /* we don't want things under the sidebar shadow */
+    padding-left: 6px;
   }
 }
