--- a/src/less/sidebar/sidebar.less
+++ b/src/less/sidebar/sidebar.less
@@ -6,6 +6,7 @@
   bottom: 0px;
 
   background-color: @banner_color;
+  box-shadow: 1px 0px 6px @dark;
 
   .glyphicon {
     font-size: -webkit-xxx-large;
