better stylig for home grid button

--- a/src/less/sidebar/sidebar.less
+++ b/src/less/sidebar/sidebar.less
@@ -11,11 +11,12 @@
   .glyphicon {
     font-size: -webkit-xxx-large;
     margin: 20px 0px 0px 27px;
+    color: @exceptionally_light_gray;
 
     cursor: pointer;
 
     &:hover {
-      color: @white_trans;
+      color: @lighter_gray;
     }
   }
 }
