--- a/src/less/streams/streams.less
+++ b/src/less/streams/streams.less
@@ -1,3 +1,19 @@
+.stream_nav {
+  margin: 0px auto;
+  width: 400px;
+
+  .glyphicon {
+    font-size: -webkit-xx-large;
+    margin: 10px;
+
+    cursor: pointer;
+
+    &:hover {
+      color: @lighter_gray;
+    }
+  }
+}
+
 .streams {
   height: 500px;
   width: 500px;
