WIP render stream view into boards.show

--- a/src/handlebars/boards/show.handlebars
+++ b/src/handlebars/boards/show.handlebars
@@ -1,7 +1,7 @@
 This is board: <b>{{id}}</b>
 
 {{!-- {{view App.StreamsView}} --}}
-{{outlet}}
+{{outlet stream}}
 
 <div class="stream_nav">
   {{#link-to "streams.show"}}
