--- a/src/handlebars/boards/show.handlebars
+++ b/src/handlebars/boards/show.handlebars
@@ -1,31 +1,3 @@
 This is board: <b>{{id}}</b>
 
-{{!-- {{view App.StreamsView}} --}}
-{{outlet stream}}
-
-<div class="stream_nav">
-  {{#link-to "streams.show"}}
-    <span class="glyphicon glyphicon-globe">
-    </span>
-  {{/link-to}}
-  {{#link-to "streams.show"}}
-    <span class="glyphicon glyphicon-flash">
-    </span>
-  {{/link-to}}
-  {{#link-to "streams.show"}}
-    <span class="glyphicon glyphicon-floppy-open">
-    </span>
-  {{/link-to}}
-  {{#link-to "streams.show"}}
-    <span class="glyphicon glyphicon-cog">
-    </span>
-  {{/link-to}}
-  {{#link-to "streams.show"}}
-    <span class="glyphicon glyphicon-link">
-    </span>
-  {{/link-to}}
-  {{#link-to "streams.show"}}
-    <span class="glyphicon glyphicon-send">
-    </span>
-  {{/link-to}}
-</div>
+{{view App.StreamsView}}
