--- a/src/handlebars/streams.handlebars
+++ b/src/handlebars/streams.handlebars
@@ -1,30 +1,28 @@
-The streams template
-
 <div class="streams">
-  {{outlet stream}}
+  {{outlet streams}}
 
   <div class="stream_nav">
-    {{#link-to "streams.show"}}
+    {{#link-to "streams.gyroscope"}}
       <span class="glyphicon glyphicon-globe">
       </span>
     {{/link-to}}
-    {{#link-to "streams.show"}}
+    {{#link-to "streams.gyroscope"}}
       <span class="glyphicon glyphicon-flash">
       </span>
     {{/link-to}}
-    {{#link-to "streams.show"}}
+    {{#link-to "streams.gyroscope"}}
       <span class="glyphicon glyphicon-floppy-open">
       </span>
     {{/link-to}}
-    {{#link-to "streams.show"}}
+    {{#link-to "streams.gyroscope"}}
       <span class="glyphicon glyphicon-cog">
       </span>
     {{/link-to}}
-    {{#link-to "streams.show"}}
+    {{#link-to "streams.gyroscope"}}
       <span class="glyphicon glyphicon-link">
       </span>
     {{/link-to}}
-    {{#link-to "streams.show"}}
+    {{#link-to "streams.gyroscope"}}
       <span class="glyphicon glyphicon-send">
       </span>
     {{/link-to}}
