--- a/src/handlebars/board.handlebars
+++ b/src/handlebars/board.handlebars
@@ -1,1 +1,33 @@
-{{view App.GyroscopeView}}
+Here is our data view:
+
+<div class="streams">
+  {{outlet}}
+
+  <div class="stream_nav">
+    {{#link-to "board.gyroscope"}}
+      <span class="glyphicon glyphicon-globe">
+      </span>
+    {{/link-to}}
+    {{#link-to "board.gyroscope"}}
+      <span class="glyphicon glyphicon-flash">
+      </span>
+    {{/link-to}}
+    {{#link-to "board.gyroscope"}}
+      <span class="glyphicon glyphicon-floppy-open">
+      </span>
+    {{/link-to}}
+    {{#link-to "board.gyroscope"}}
+      <span class="glyphicon glyphicon-cog">
+      </span>
+    {{/link-to}}
+    {{#link-to "board.gyroscope"}}
+      <span class="glyphicon glyphicon-link">
+      </span>
+    {{/link-to}}
+    {{#link-to "board.gyroscope"}}
+      <span class="glyphicon glyphicon-send">
+      </span>
+    {{/link-to}}
+  </div>
+</div>
+
