fix streams styling

--- a/src/less/streams/streams.less
+++ b/src/less/streams/streams.less
@@ -1,20 +1,19 @@
 .stream_nav {
   margin: 0px auto;
-  width: 400px;
+  position: absolute;
+  bottom: 20px;
+  left: ~"calc(50% - 142px)";
 
   .glyphicon {
-    font-size: -webkit-xx-large;
+    font-size: x-large;
     margin: 10px;
 
     cursor: pointer;
 
+    color: @black;
+
     &:hover {
-      color: @lighter_gray;
+      color: @light_gray;
     }
   }
-}
-
-.streams {
-  height: 500px;
-  width: 500px;
 }
