routes for each sensor

--- a/src/handlebars/board.handlebars
+++ b/src/handlebars/board.handlebars
@@ -2,11 +2,11 @@
   {{outlet}}
 
   <div class="stream_nav">
-    {{#link-to "board.gyroscope"}}
+    {{#link-to "board.accelerometer"}}
       <span class="glyphicon glyphicon-globe">
       </span>
     {{/link-to}}
-    {{#link-to "board.gyroscope"}}
+    {{#link-to "board.gps"}}
       <span class="glyphicon glyphicon-flash">
       </span>
     {{/link-to}}
@@ -14,15 +14,23 @@
       <span class="glyphicon glyphicon-floppy-open">
       </span>
     {{/link-to}}
-    {{#link-to "board.gyroscope"}}
+    {{#link-to "board.humidity"}}
       <span class="glyphicon glyphicon-cog">
       </span>
     {{/link-to}}
-    {{#link-to "board.gyroscope"}}
+    {{#link-to "board.luminosity"}}
       <span class="glyphicon glyphicon-link">
       </span>
     {{/link-to}}
-    {{#link-to "board.gyroscope"}}
+    {{#link-to "board.magnetometer"}}
+      <span class="glyphicon glyphicon-send">
+      </span>
+    {{/link-to}}
+    {{#link-to "board.pressure"}}
+      <span class="glyphicon glyphicon-send">
+      </span>
+    {{/link-to}}
+    {{#link-to "board.temperature"}}
       <span class="glyphicon glyphicon-send">
       </span>
     {{/link-to}}
