do sensor reads in parent controller

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -13,7 +13,7 @@ a {
 }
 
 body {
-  background-color: @exceptionally_light_gray;
+  background-color: @white;
 
   .right_pane {
     position: absolute;
