--- a/src/less/sidebar/sidebar.less
+++ b/src/less/sidebar/sidebar.less
@@ -5,8 +5,8 @@
   left: 0px;
   bottom: 0px;
 
-  background-color: @banner_color;
-  box-shadow: 1px 0px 6px @dark;
+  filter: blur(0.3);
+  background-color: @gray_clearer;
 
   .glyphicon {
     font-size: -webkit-xxx-large;
