nicer styling, background texture

--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -1,4 +1,4 @@
-@exceptionally_light_gray:  #ADADAE;
+@exceptionally_light_gray:  #CCCCCC;
 @lighter_gray:              #8A8A8C;
 @light_gray:                #59595B;
 @medium_light_gray:         #505051;
