--- a/src/less/sidebar/sidebar.less
+++ b/src/less/sidebar/sidebar.less
@@ -1,6 +1,7 @@
 .sidebar {
   width: 100px;
   position: absolute;
+  border-right: 1px solid @exceptionally_light_gray;
   top: 0px;
   left: 0px;
   bottom: 0px;
@@ -11,12 +12,12 @@
   .glyphicon {
     font-size: -webkit-xxx-large;
     margin: 20px 0px 0px 27px;
-    color: @exceptionally_light_gray;
+    color: @lighter_gray;
 
     cursor: pointer;
 
     &:hover {
-      color: @lighter_gray;
+      color: @light_gray;
     }
   }
 }
