--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,6 +2,7 @@
 @import "mixins";
 @import "sidebar/sidebar";
 @import "boards/boards";
+@import "boards/gps";
 @import "streams/streams";
 
 h1, h2, h3, h4, h5, h6 {
