better home icon

--- a/src/handlebars/sidebar.handlebars
+++ b/src/handlebars/sidebar.handlebars
@@ -1,6 +1,6 @@
 <div class="sidebar">
   {{#link-to 'boards'}}
-    <span class="glyphicon glyphicon-th">
+    <span class="glyphicon glyphicon-home">
     </span>
   {{/link-to}}
 </div>
