--- a/src/less/sidebar/sidebar.less
+++ b/src/less/sidebar/sidebar.less
@@ -10,8 +10,8 @@
   background-color: @gray_clearer;
 
   .glyphicon {
-    font-size: -webkit-xxx-large;
-    margin: 20px 0px 0px 27px;
+    font-size: xx-large;
+    margin: 25px 0px 0px 32px;
     color: @lighter_gray;
 
     cursor: pointer;
