--- a/src/less/boards/boards.less
+++ b/src/less/boards/boards.less
@@ -12,23 +12,46 @@ body .right_pane {
       -webkit-overflow-scrolling: touch;
 
       ul {
-        height: @height;
+        height: 200px;
         width: 1500px;
         padding: 0px;
-        min-width: 100%;
-        text-align: justify;
 
         li {
-          .hover-color(@lighter_gray);
-
-          display: inline-block;
-          cursor: pointer;
-          height: @height;
           width: 300px;
+          display: inline-block;
 
-          color: @very_dark;
+          .container {
+            .hover-color(@lighter_gray);
+
+            cursor: pointer;
+            height: 180px;
+            width: 250px;
+            margin: 10px auto;
+
+            color: @very_dark;
+            text-align: center;
+
+            h3 {
+              margin-top: 0px;
+            }
+
+            .stoplight {
+              svg {
+                height: 20px;
+                width: 20px;
+                margin: 5px 0px 0px 165px;
+              }
+            }
+          }
         }
       }
+    }
+
+    .outline {
+      height: 100px;
+      width: 200px;
+      background-size: 200px 100px;
+      background-image: url('../assets/outline.png');
     }
   }
 }
