new route for world

--- a/src/handlebars/sidebar.handlebars
+++ b/src/handlebars/sidebar.handlebars
@@ -3,4 +3,8 @@
     <span class="glyphicon glyphicon-home">
     </span>
   {{/link-to}}
+  {{#link-to 'world'}}
+    <span class="glyphicon glyphicon-globe">
+    </span>
+  {{/link-to}}
 </div>
