--- a/src/less/boards/boards.less
+++ b/src/less/boards/boards.less
@@ -27,6 +27,7 @@ body .right_pane {
             height: 180px;
             width: 250px;
             margin: 10px auto;
+            border-radius: 5px;
 
             color: @very_dark;
             text-align: center;
