route for settings

--- a/src/handlebars/boards/index.handlebars
+++ b/src/handlebars/boards/index.handlebars
@@ -1,5 +1,5 @@
 <div class="horizontal">
-  <ul>
+  <ul class="boards_list">
     {{#each board in boards}}
       {{#link-to "board" board}}
         <li>
