--- a/src/handlebars/sidebar.handlebars
+++ b/src/handlebars/sidebar.handlebars
@@ -1,10 +1,18 @@
 <div class="sidebar">
-  {{#link-to 'boards'}}
-    <span class="glyphicon glyphicon-home">
-    </span>
-  {{/link-to}}
-  {{#link-to 'world'}}
-    <span class="glyphicon glyphicon-globe">
-    </span>
-  {{/link-to}}
+  <div class="top">
+    {{#link-to 'boards'}}
+      <span class="glyphicon glyphicon-home">
+      </span>
+    {{/link-to}}
+    {{#link-to 'world'}}
+      <span class="glyphicon glyphicon-globe">
+      </span>
+    {{/link-to}}
+  </div>
+  <div class="bottom">
+    {{#link-to 'settings'}}
+      <span class="glyphicon glyphicon-cog">
+      </span>
+    {{/link-to}}
+  </div>
 </div>
