--- a/src/less/boards/boards.less
+++ b/src/less/boards/boards.less
@@ -14,7 +14,6 @@ body .right_pane {
       ul {
         height: 200px;
         width: 1500px;
-        padding: 0px;
 
         li {
           width: 300px;
@@ -46,6 +45,10 @@ body .right_pane {
           }
         }
       }
+    }
+
+    ul.boards_list {
+      padding: 0px 0px 0px 100px;
     }
 
     .outline {
