--- a/src/less/index.less
+++ b/src/less/index.less
@@ -4,6 +4,7 @@
 @import "boards/boards";
 @import "boards/gps";
 @import "streams/streams";
+@import "world/world";
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Lato', sans-serif;
@@ -20,9 +21,9 @@ body {
 
   .right_pane {
     position: absolute;
-    width: ~"calc(100% - 100px)";
+    width: 100%;
     top: 0px;
-    left: 100px;
+    left: 0px;
     bottom: 0px;
   }
 }
