use svg to render Apollo outline

--- a/src/handlebars/boards/index.handlebars
+++ b/src/handlebars/boards/index.handlebars
@@ -5,7 +5,9 @@
         <li>
           <div class="container">
             <h3>{{board.productId}}</h3>
-            <div class="outline"></div>
+            <div class="outline">
+              {{view App.OutlineView}}
+            </div>
             <div class="stoplight">
               {{view App.CircleView}}
             </div>
