--- a/src/handlebars/outline.handlebars
+++ b/src/handlebars/outline.handlebars
@@ -1,4 +1,4 @@
-<path {{bind-attr fill="fill"}} stroke="#000000" stroke-width="0.7087" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="
+<path stroke="#000000" stroke-width="0.7087" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="
 M82.314,29.288l2.349,4.194h7.382l2.516-4.194c0.418-0.718,1.182-1.164,2.013-1.174c0,0,290.232,0,290.232,0
 c1.668,0,3.02,1.352,3.02,3.02v13.253c-0.018,0.926-0.626,1.737-1.51,2.013c0,0-4.865,1.678-4.865,1.678v12.582l4.865,1.678
 c0.884,0.276,1.492,1.087,1.51,2.013v71.3c-0.018,0.926-0.626,1.737-1.51,2.013c0,0-4.865,1.678-4.865,1.678v12.582l4.865,1.51
