--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -27,3 +27,7 @@
 
 @almost_black:              rgba(0, 0, 0, 0.7);
 @black:                     black;
+
+/* boards page */
+@bar_green:                 rgb(77, 151, 19);
+@bar_red:                   rgb(233, 34, 34);
