--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,6 +3,7 @@
 @import "sidebar/sidebar";
 @import "boards/boards";
 @import "boards/live/live";
+@import "boards/live/storage_bar";
 @import "boards/gps";
 @import "streams/streams";
 @import "world/world";
