empty explore view for now

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -3,8 +3,10 @@
 @import "sidebar/sidebar";
 @import "boards/boards";
 @import "boards/live/live";
+@import "boards/live/explore";
 @import "boards/live/storage_bar";
 @import "boards/gps";
+@import "components/buttons";
 @import "streams/streams";
 @import "world/world";
 
