delete imposter file

--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -29,5 +29,7 @@
 @black:                     black;
 
 /* boards page */
-@bar_green:                 rgb(82, 150, 26);
+@bar_green:                 #6FEC07;
 @bar_red:                   rgb(233, 34, 34);
+
+@light_gradient:            linear-gradient(#fafafa,#ffffff);
