--- a/src/less/boards/live/storage_bar.less
+++ b/src/less/boards/live/storage_bar.less
@@ -3,7 +3,7 @@
   height: 30px;
   margin: 0px auto;
   border: 1px solid black;
-  background-color: @lighter_gray;
+  background-image: @light_gradient;
   border-radius: 5px;
 
   .filled {
