controller data to the page

--- a/src/handlebars/board/live.handlebars
+++ b/src/handlebars/board/live.handlebars
@@ -1,5 +1,6 @@
 <div class="live">
   {{view App.ApolloView}}
-  {{view App.StorageBarView}}
+  {{view App.BoardStoragebarView}}
+  {{view App.BoardStoragebarView}}
   {{view App.BoardLiveExploreView}}
 </div>
