progress bars controlled from boardController.js

--- a/src/handlebars/board/live.handlebars
+++ b/src/handlebars/board/live.handlebars
@@ -1,6 +1,6 @@
 <div class="live">
   {{view App.ApolloView}}
-  {{view App.BoardStoragebarView}}
-  {{view App.BoardStoragebarView}}
+  {{view App.BoardSdmemorybarView}}
+  {{view App.BoardFlashmemorybarView}}
   {{view App.BoardLiveExploreView}}
 </div>
