--- a/src/less/boards/live/storage_bar.less
+++ b/src/less/boards/live/storage_bar.less
@@ -1,15 +1,14 @@
 .storage_bar {
   width: 600px;
   height: 30px;
-  margin: 0px auto;
-  border: 1px solid black;
+  margin: 20px auto;
+  border: 1px solid @lighter_gray;
   background-image: @light_gradient;
   border-radius: 5px;
 
   .filled {
     background-color: @bar_green;
     height: 100%;
-    width: 40%;
 
     text-align: center;
     padding-top: 7px;
