storage bar styles arent half bad

--- a/src/handlebars/board/flashmemorybar.handlebars
+++ b/src/handlebars/board/flashmemorybar.handlebars
@@ -1,5 +1,10 @@
-<div class="storage_bar">
-  <div class="filled" {{bind-attr style="flashMemoryStyle"}}>
-    <h6>{{flashMemory}}% full</h6>
+<div class="container">
+  <div class="label">
+    <h6>Flash</h6>
+  </div>
+  <div class="storage_bar">
+    <div class="filled" {{bind-attr style="flashMemoryStyle"}}>
+      <h6>{{flashMemory}}% full</h6>
+    </div>
   </div>
 </div>
