--- a/src/handlebars/board/sdmemorybar.handlebars
+++ b/src/handlebars/board/sdmemorybar.handlebars
@@ -1,5 +1,10 @@
-<div class="storage_bar">
-  <div class="filled" {{bind-attr style="sdMemoryStyle"}}>
-    <h6>{{sdMemory}}% full</h6>
+<div class="container">
+  <div class="label">
+    <h6>SD</h6>
+  </div>
+  <div class="storage_bar">
+    <div class="filled" {{bind-attr style="sdMemoryStyle"}}>
+      <h6>{{sdMemory}}% full</h6>
+    </div>
   </div>
 </div>
