--- a/src/less/boards/live/storage_bar.less
+++ b/src/less/boards/live/storage_bar.less
@@ -1,22 +1,42 @@
-.storage_bar {
-  width: 600px;
-  height: 30px;
-  margin: 20px auto;
-  border: 1px solid @lighter_gray;
-  background-image: @light_gradient;
-  border-radius: 5px;
+.container {
+  width: 680px;
+  margin: 10px auto;
 
-  .filled {
-    background-color: @bar_green;
-    height: 100%;
-
+  .label {
+    float: left;
+    height: 30px;
+    width: 40px;
+    border: 1px solid @lighter_gray;
+    border-radius: 5px;
+    background-image: @light_gradient;
     text-align: center;
-    padding-top: 7px;
 
     h6 {
-      text-transform: uppercase;
-      margin: 0px;
-      color: @black;
+      font-size: 10px;
+      margin-top: 7px;
+    }
+  }
+
+  .storage_bar {
+    float: right;
+    width: 600px;
+    height: 30px;
+    border: 1px solid @lighter_gray;
+    background-image: @light_gradient;
+    border-radius: 5px;
+
+    .filled {
+      background-color: @bar_green;
+      height: 100%;
+
+      text-align: center;
+      padding-top: 7px;
+
+      h6 {
+        text-transform: uppercase;
+        margin: 0px;
+        color: @black;
+      }
     }
   }
 }
