only 3 pages within board/

--- a/src/handlebars/board.handlebars
+++ b/src/handlebars/board.handlebars
@@ -6,32 +6,12 @@
   {{outlet}}
 
   <div class="stream_nav">
-    {{#link-to "board.accelerometer"}}
-      <span class="glyphicon glyphicon-globe">
-      </span>
-    {{/link-to}}
-    {{#link-to "board.gps"}}
+    {{#link-to "board.live"}}
       <span class="glyphicon glyphicon-flash">
       </span>
     {{/link-to}}
     {{#link-to "board.gyroscope"}}
       <span class="glyphicon glyphicon-floppy-open">
-      </span>
-    {{/link-to}}
-    {{#link-to "board.humidity"}}
-      <span class="glyphicon glyphicon-cog">
-      </span>
-    {{/link-to}}
-    {{#link-to "board.luminosity"}}
-      <span class="glyphicon glyphicon-link">
-      </span>
-    {{/link-to}}
-    {{#link-to "board.magnetometer"}}
-      <span class="glyphicon glyphicon-send">
-      </span>
-    {{/link-to}}
-    {{#link-to "board.pressure"}}
-      <span class="glyphicon glyphicon-send">
       </span>
     {{/link-to}}
     {{#link-to "board.temperature"}}
