--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -11,6 +11,7 @@
 
 @white_window:              rgba(255, 255, 255, 0.3);
 @white_trans:               rgba(255, 255, 255, 0.5);
+@white_opaque:              rgba(255, 255, 255, 0.7);
 
 @cyan:                      #29ABE2;
 @dark_cyan:                 #1E80A9;
