--- a/src/less/boards/board.less
+++ b/src/less/boards/board.less
@@ -31,6 +31,28 @@
   }
 }
 
+.compass {
+  height: 200px;
+  width: 200px;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  z-index: 9999;
+
+  .rotary {
+    fill: @white_opaque;
+  }
+
+  .background {
+    fill: @white_window;
+  }
+
+  .needle {
+    fill: @cyan;
+  }
+}
+
 .stream_nav {
   margin: 0px auto;
   position: absolute;
