--- a/src/less/index.less
+++ b/src/less/index.less
@@ -7,7 +7,7 @@
 @import "boards/live/storage_bar";
 @import "boards/gps";
 @import "components/buttons";
-@import "streams/streams";
+@import "boards/board";
 @import "world/world";
 
 h1, h2, h3, h4, h5, h6 {
