--- a/src/handlebars/sidebar.handlebars
+++ b/src/handlebars/sidebar.handlebars
@@ -9,6 +9,20 @@
       </span>
     {{/link-to}}
   </div>
+  <div class="board">
+    {{#link-to 'index'}}
+      <span class="glyphicon glyphicon-arrow-left">
+      </span>
+    {{/link-to}}
+    {{#link-to 'world'}}
+      <span class="glyphicon glyphicon-signal">
+      </span>
+    {{/link-to}}
+    {{#link-to 'world'}}
+      <span class="glyphicon glyphicon-refresh">
+      </span>
+    {{/link-to}}
+  </div>
   <div class="bottom">
     {{#link-to 'settings'}}
       <span class="glyphicon glyphicon-cog">
