sub-sidebar looks ok

--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -34,3 +34,4 @@
 @bar_red:                   rgb(233, 34, 34);
 
 @light_gradient:            linear-gradient(#fafafa,#ffffff);
+@clear_gradient:            linear-gradient(rgba(250, 250, 250, 0.25),rgba(255, 255, 255, 0.25));
