--- a/src/less/sidebar/sidebar.less
+++ b/src/less/sidebar/sidebar.less
@@ -27,7 +27,12 @@
   }
 
   .board {
-    display: none;
+    display: none; /* this gets toggled */
+
+    margin: 0px 20px;
+    border: 1px solid @exceptionally_light_gray;
+    border-radius: 10px;
+    background-image: @clear_gradient;
 
     .glyphicon {
       font-size: 20px;
