wild stab at 3D charts

--- a/src/handlebars/sidebar.handlebars
+++ b/src/handlebars/sidebar.handlebars
@@ -5,7 +5,7 @@
       </span>
     {{/link-to}}
   </div>
-  <div class="top">
+  <div id="top">
     {{#link-to 'world'}}
       <span class="glyphicon glyphicon-globe">
       </span>
