--- a/src/handlebars/sidebar.handlebars
+++ b/src/handlebars/sidebar.handlebars
@@ -20,7 +20,7 @@
       <span class="glyphicon glyphicon-floppy-open">
       </span>
     {{/link-to}}
-    {{#link-to "board.temperature"}}
+    {{#link-to "board.graph"}}
       <span class="glyphicon glyphicon-send">
       </span>
     {{/link-to}}
