center the graph section

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -6,6 +6,7 @@
 @import "boards/live/explore";
 @import "boards/live/storage_bar";
 @import "boards/gps";
+@import "boards/graph";
 @import "components/buttons";
 @import "boards/board";
 @import "world/world";
