--- a/src/less/boards/graph.less
+++ b/src/less/boards/graph.less
@@ -3,3 +3,22 @@
     margin: 0px auto;
   }
 }
+
+.vectors {
+  position: absolute;
+  bottom: 0px;
+  left: ~"calc(50% - 140px)";
+
+  div.vector {
+    height: 50px;
+    width: 50px;
+    margin: 10px;
+    float: left;
+
+    background-color: blue;
+    border-radius: 5px;
+
+    text-align: center;
+    cursor: pointer;
+  }
+}
