--- a/src/handlebars/board/graph.handlebars
+++ b/src/handlebars/board/graph.handlebars
@@ -1,2 +1,17 @@
 <div id="graph">
 </div>
+
+<div class="vectors">
+  <div class="vector" draggable="true">
+    T
+  </div>
+  <div class="vector" draggable="true">
+    P
+  </div>
+  <div class="vector" draggable="true">
+    H
+  </div>
+  <div class="vector" draggable="true">
+    L
+  </div>
+</div>
