switch to ember views

--- a/src/handlebars/board/graph.handlebars
+++ b/src/handlebars/board/graph.handlebars
@@ -2,16 +2,8 @@
 </div>
 
 <div class="vectors">
-  <div class="vector" draggable="true">
-    T
-  </div>
-  <div class="vector" draggable="true">
-    P
-  </div>
-  <div class="vector" draggable="true">
-    H
-  </div>
-  <div class="vector" draggable="true">
-    L
-  </div>
+  {{view App.VectorView}}
+  {{view App.VectorView}}
+  {{view App.VectorView}}
+  {{view App.VectorView}}
 </div>
