function to draw a line

--- a/src/handlebars/board/graph.handlebars
+++ b/src/handlebars/board/graph.handlebars
@@ -2,8 +2,8 @@
 </div>
 
 <div class="vectors">
-  {{view App.VectorView}}
-  {{view App.VectorView}}
-  {{view App.VectorView}}
-  {{view App.VectorView}}
+  {{view App.VectorView name="T" vector="temperature"}}
+  {{view App.VectorView name="P" vector="pressure"}}
+  {{view App.VectorView name="H" vector="humidity"}}
+  {{view App.VectorView name="L" vector="luminosity"}}
 </div>
