--- a/src/less/boards/boards.less
+++ b/src/less/boards/boards.less
@@ -16,7 +16,7 @@ body .right_pane {
         li {
           display: inline-block;
 
-          .container {
+          >div {
             margin: 10px auto;
             border: 1px solid red;
             border-radius: 5px;
@@ -30,14 +30,7 @@ body .right_pane {
 
             .board {
               height: 400px;
-              width: 500px;
-
-              svg {
-                fill: clear;
-
-                .hover-fill(@lighter_gray);
-                cursor: pointer;
-              }
+              width: 200px;
             }
 
             .stoplight {
