Apollo in front menu

--- a/src/less/boards/boards.less
+++ b/src/less/boards/boards.less
@@ -9,7 +9,7 @@ body .right_pane {
       overflow-x: scroll;
 
       ul {
-        width: 2500px;
+        width: 1000px;
         padding: 0px 0px 0px 100px;
         margin-top: 140px;
 
@@ -31,6 +31,10 @@ body .right_pane {
             .board {
               height: 400px;
               width: 200px;
+
+              background-image: url('../assets/apollo_front.png');
+              background-size: 200px 400px;
+              background-repeat: no-repeat;
             }
 
             .stoplight {
