--- a/src/handlebars/sidebar.handlebars
+++ b/src/handlebars/sidebar.handlebars
@@ -11,7 +11,7 @@
       </span>
     {{/link-to}}
   </div>
-  <div class="board">
+  <div id="board" class="board">
     {{#link-to "board.live"}}
       <span class="glyphicon glyphicon-flash">
       </span>
