--- a/src/less/boards/boards.less
+++ b/src/less/boards/boards.less
@@ -14,6 +14,7 @@ body .right_pane {
         margin-top: 140px;
 
         li {
+          height: 500px;
           display: inline-block;
 
           >div {
@@ -29,12 +30,20 @@ body .right_pane {
             }
 
             .board {
-              height: 400px;
               width: 200px;
+              height: 400px;
 
               background-image: url('../assets/apollo_front.png');
               background-size: 200px 400px;
               background-repeat: no-repeat;
+
+              margin-top: 50px;
+              margin-bottom: 0px;
+
+              &:hover {
+                margin-top: 0px;
+                margin-bottom: 50px;
+              }
             }
 
             .stoplight {
